# grab

./: CHANGELOG.md  Cargo.toml  Makefile.toml  README.md  release-plz.toml
.github/workflows/: cd.yml  ci.yml
echo-service/src/: lib.rs
grab/: Cargo.toml
grab/src/: descriptor.rs  lib.rs  main.rs
grab/tests/: integration_test.rs
granc/: CHANGELOG.md  Cargo.toml  README.md
granc-core/: Cargo.toml  README.md
granc-core/src/: client.rs  grpc_client.rs  lib.rs  reflection.rs
granc-core/src/client/: error.rs  grpc.rs  handler.rs  model.rs  offline.rs  online.rs  online_without_reflection.rs  with_file_descriptor.rs  with_server_reflection.rs
granc-core/src/grpc/: client.rs
granc-core/src/reflection/: client.rs
granc-core/src/reflection/client/: integration_test.rs
granc-core/tests/: echo_service_impl.rs  granc_client_file_descriptor_test.rs  granc_client_offline_test.rs  granc_client_online_test.rs  granc_client_online_without_reflection_test.rs  granc_client_reflection_test.rs  granc_client_test.rs  reflection_client_test.rs  with_file_descriptor_test.rs
granc-test-support/: Cargo.toml
granc-test-support/src/: compiler.rs  lib.rs
granc-tools/: Cargo.toml
granc/src/: cli.rs  core.rs  formatter.rs  main.rs  reflection.rs
granc/src/client/: integration_test.rs
granc/src/core/: client.rs  reflection.rs
granc/src/core/client/: integration_test.rs
granc/src/core/reflection/: client.rs  generated.rs  registry.rs
granc/src/docgen/: markdown.rs  package.rs
granc/src/reflection/: local.rs  remote.rs
src/: client.rs  codec.rs  main.rs
(+2 files in other folders)
