[package]
name = "granc-tools"
edition = { workspace = true }
publish = false

[features]
gen-proto = ["dep:tonic-prost-build"]

[[bin]]
name = "generate-reflection-service"
path = "bin/generate_reflection_service.rs"
required-features = ["gen-proto"]

[dependencies]
tonic-prost-build = { workspace = true, optional = true }
